--- a/課堂電子教材/0311/github-200310.md
+++ b/課堂電子教材/0311/github-200310.md
@@ -12,7 +12,7 @@
 
 然後點進Repositories，點擊右邊的「New」來建立一個新的程式庫。
 
-2-1. 新增 `.gitgnore` 排除不需要上傳的東西
+2-1. 新增 `.gitignore` 排除不需要上傳的東西
 
 ```text
 node_modules/
